<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".EstadisticasActivity">

    <!-- Encabezado -->
    <TextView
        android:id="@+id/tituloEstadisticas"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:layout_marginTop="16dp"
        android:text="@string/estadisticas"
        android:gravity="center"
        android:background="#FFC107"
        android:textStyle="bold"
        android:textColor="#000000"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:letterSpacing="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/filaEncabezadoEst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloEstadisticas">

        <!-- Titulos columnas -->

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorPrimary"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:text="@string/equipo"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:layout_margin="2dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:letterSpacing="0.0000"
            android:onClick="clickTablaGF"
            android:text="@string/prom_goles_covertidos"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:background="@drawable/style_btn_color" />

        <Button
            android:id="@+id/btnGC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:layout_margin="2dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:letterSpacing="0.0000"
            android:onClick="clickTablaGC"
            android:text="@string/prom_goles_concedidos"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:background="@drawable/style_btn_color" />

        <Button
            android:id="@+id/btnPTSL"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:layout_margin="2dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:letterSpacing="0.0000"
            android:onClick="clickTablaPTSL"
            android:text="@string/porc_put_local"
            android:textColor="#000000"
            android:textSize="11dp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:background="@drawable/style_btn_color" />

        <Button
            android:id="@+id/btnPTSV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:layout_margin="2dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:letterSpacing="0.0000"
            android:onClick="clickTablaPTSV"
            android:text="@string/porc_pts_vistante"
            android:textColor="#000000"
            android:textSize="11dp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:background="@drawable/style_btn_color" />

    </TableRow>

    <TableLayout
        android:id="@+id/tbEstadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filaEncabezadoEst">
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>